fix: fondo 75% con pendientes mas visibles

--- a/css/style.css
+++ b/css/style.css
@@ -282,8 +282,8 @@ header {
     background-image:
         linear-gradient(rgba(239, 224, 204, 0.15), rgba(239, 224, 204, 0.15)),
         url('../images/fondo.jpg');
-    background-size: auto;
-    background-position: center top;
+    background-size: 75%;
+    background-position: center 15%;
     background-repeat: no-repeat;
 }
 
